# OfflineRL-CQL-Walker2d

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb  test.ipynb
src/: train_cql.py  trainer.py
